@@ -9,8 +9,11 @@
 polywog 0.2-1 (2012-07-XX)
 --------------------------
 
-* bootPolywog() now has argument maxtries to control failure when a non-collinear
-  bootstrap model matrix cannot be found
+* polywog() now has argument 'penalize.linear' to allow terms included linearly
+  (i.e. not in the polynomial expansion) to be exempt from the LASSO penalty
+
+* bootPolywog() now has argument 'maxtries' to control failure when a
+  non-collinear bootstrap model matrix cannot be found
 
 * Fixed bug that sometimes caused predVals() to fail unexpectedly
 
